@@ -1725,6 +1725,7 @@ t/103-thruk_utils_io.t
 t/104-thruk_utils_cache.t
 t/105-thruk-utils-ssi.t
 t/106-thruk_context.t
+t/107-thruk_utils_avail.t
 t/150-config-sitepanel.t
 t/200-view_Excel.t
 t/200-view_GD.t
